--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "main/webapp/main/webapp/admin/toeic"]
 	path = main/webapp/main/webapp/admin/toeic
 	url = git@github.com:anhdepzai15/toeic.git
+[submodule "main/java"]
+	path = main/java
+	url = git@github.com:anhdepzai15/toeic.git
